<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="General">

        <EditTextPreference
            android:defaultValue="Your Name"
            app:key="user_display_name"
            app:title="Display Name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="yourname@yourhost.com"
            android:key="user_email_address"
            android:title="Email Address"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="@string/pref_default_favorite_social"
            app:entries="@array/pref_entries_favorite_social"
            app:entryValues="@array/pref_values_favorite_social"
            app:key="user_favorite_social"
            app:title="Favorite Social Network"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="Notifications">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>